[package]
name = "window_reader"
version = "1.1.2"
description = "A transparent notepad like app"
authors = [ "Ripwords" ]
license = ""
repository = "https://github.com/Ripwords/window-reader"
default-run = "window_reader"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.3", features = [ "api-all", "updater" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
